# time-guardian

./: Cargo.toml  default.nix  deploy.sh  deploy_win_vm.sh  flake.nix  nix_module.nix  run_test.sh  status_test.sh  test_windows.sh
configs/: default  test_simple
src/: config.rs  counter.rs  file_io.rs  lib.rs  logging.rs  main.rs  notification.rs  run.rs  session.rs  status.rs  time_slot.rs  tracker.rs  user.rs  user_management.rs
