[package]
name = "time-guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
confy = "0.5.1"
peg = "0.8.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.155"
thiserror = "1.0.60"
toml = "0.8.12"
