[package]
name = "time-guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deploy = []

[dependencies]
color-eyre = "0.6.2"
peg = "0.8.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.155"
thiserror = "1.0.60"
toml = "0.8.12"
break-enforcer = { git = "https://github.com/evavh/break-enforcer-s" }
serde_with = "3.8.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
jiff = { version = "0.1.15", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
serde_json = "1.0.133"
